name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/homework-3-Brat-vseznamus#readme
bug-reports:         https://github.com/fp-ctd-itmo/homework-3-Brat-vseznamus/issues
license:             MIT
license-file:        LICENSE
author:              Fedor Vihnin
maintainer:          fvixnin@gmail.com
copyright:           2022 Fedor Vihnin
license:             MIT
build-type:          Simple

category:            Web
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  exposed-modules:
      HW3.Base
      HW3.Parser
      HW3.Pretty
      HW3.Evaluator
      HW3.Action
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  build-depends:
      base >=4.7 && <5
    , scientific
    , haskeline >=0.8.1.2
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , parser-combinators
    , mtl
    , text
    , containers
    , bytestring
    , zlib
    , serialise
    , directory
    , time
    , random
  default-language: Haskell2010

executable hi
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , haskeline >=0.8.1.2
    , hw3
  default-language: Haskell2010

test-suite hi-test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.7
    , hw3
    , tasty-smallcheck >= 0.8.2
    , tasty-quickcheck >= 0.10.1.2
    , tasty-hunit >= 0.10.0.3
    , scientific
    , haskeline >=0.8.1.2
    , megaparsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , directory